# tetrika-junior

./: pyproject.toml
task1/: solution.py
task2/: solution.py
