[project]
name = "tetrika-junior"
version = "0.1.0"
description = ""
authors = [
    {name = "Floccinau",email = "argonavt28@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
